# my-fastapi

./: .gitignore  makefile  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  ping.py
app/common/: constants.py  logging.py
app/conf/: __init__.py  settings.py
app/db/: redis.py  sql.py
app/models/: base.py  user.py
app/myapp/: __init__.py
app/schemas/: __init__py  common.py  exceptions.py  http.py
app/utils/: env.py
