[tool.poetry]
name = "my-fastapi"
version = "0.1.0"
description = ""
authors = ["LynchQ <hlq_sryx@163.com>"]
readme = "README.md"
packages = [{include = "my_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
