[tool.poetry]
name = "my-fastapi"
version = "0.1.0"
description = ""
authors = ["LynchQ <hlq_sryx@163.com>"]
readme = "README.md"
packages = [{ include = "my_fastapi" }]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.4"
uvicorn = "^0.20.0"
logbook = "^1.5.3"
redis = "^4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
